// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / InfoBar Default usage 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
  background-color: transparent;
}

.c6 {
  padding-right: 8px;
  background-color: transparent;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #F5F5F5;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #336BFF;
}

.c1 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M8 16A8 8 0 108 0a8 8 0 000 16zM7 4h2v2H7V4zm0 3h2v5H7V7z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              InfoBar should be used on top of the pages to show Marketing or Customer Support communication messages. Content of the InfoBar is just rendered 
              <code>
                children
              </code>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / InfoBar Different variants 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
  background-color: transparent;
}

.c6 {
  padding-right: 8px;
  background-color: transparent;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c11 {
  color: #FFCF00;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c13 {
  color: #FF4733;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c15 {
  color: #51CB20;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #F5F5F5;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #336BFF;
}

.c1 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c10 {
  background: #FFFAE5;
  color: #282823;
}

.c10 span {
  color: inherit;
}

.c10 a {
  font-weight: bold;
  color: #282823;
}

.c10 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c12 {
  background: #FFECEA;
  color: #282823;
}

.c12 span {
  color: inherit;
}

.c12 a {
  font-weight: bold;
  color: #282823;
}

.c12 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c14 {
  background: #EDFAE8;
  color: #282823;
}

.c14 span {
  color: inherit;
}

.c14 a {
  font-weight: bold;
  color: #282823;
}

.c14 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

<div
  className="c0"
>
  <code>
    no variant passed, defaults to general
  </code>
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M8 16A8 8 0 108 0a8 8 0 000 16zM7 4h2v2H7V4zm0 3h2v5H7V7z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="/nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    general
  </code>
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M8 16A8 8 0 108 0a8 8 0 000 16zM7 4h2v2H7V4zm0 3h2v5H7V7z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="/nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    warning
  </code>
  <br />
  <div
    className="c10"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c11"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M9.3 1.5a1.5 1.5 0 00-2.6 0L.204 12.754a1.5 1.5 0 001.3 2.25h12.994a1.5 1.5 0 001.3-2.25L9.299 1.5zM7 10h2V5H7v5zm0 3h2v-2H7v2z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We’re currently working on the new main menu. Links marked with arrow icon will redirect you to the previous website experience. 
              <a
                href="/nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    error
  </code>
  <br />
  <div
    className="c12"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c13"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M4.686 0h6.628L16 4.686v6.628L11.314 16H4.686L0 11.314V4.686L4.686 0zM9 9V3H7v6h2zm0 4v-2H7v2h2z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              The US market is currently down, we are fixing it right now. It will soon be back and running. 
              <a
                href="/nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <code>
    variant=
    success
  </code>
  <br />
  <div
    className="c14"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c15"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M8 16C12.4183 16 16 12.4183 16 8C16 3.58172 12.4183 0 8 0C3.58172 0 0 3.58172 0 8C0 12.4183 3.58172 16 8 16ZM12.5356 5.93551L6.52516 11.9459L2.98962 8.41039L4.40384 6.99618L6.52516 9.11749L11.1214 4.5213L12.5356 5.93551Z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              We have fixed the US market issue. It is now back to service. 
              <a
                href="/nonce"
              >
                Read more
              </a>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
</div>
`;

exports[`Storyshots Molecules / InfoBar onClose prop demo 1`] = `
.c3 {
  padding-left: 12px;
  padding-top: 4px;
  padding-right: 12px;
  padding-bottom: 4px;
  background-color: transparent;
}

.c6 {
  padding-right: 8px;
  background-color: transparent;
}

.c10 {
  padding-left: 8px;
  background-color: transparent;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c11 {
  color: #282823;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c2 {
  box-sizing: border-box;
  margin: 0 auto;
}

.c1 {
  background: #F5F5F5;
  color: #282823;
}

.c1 span {
  color: inherit;
}

.c1 a {
  font-weight: bold;
  color: #336BFF;
}

.c1 button {
  display: block;
  padding: 0;
  background: none;
  border-width: 0;
  cursor: pointer;
}

.c0 {
  background: #f5f5f5;
}

@media (min-width:760px) {
  .c3 {
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:760px) {
  .c2 {
    max-width: 760px;
    padding: 0 20px;
  }
}

@media (min-width:976px) {
  .c2 {
    max-width: 976px;
    padding: 0 20px;
  }
}

@media (min-width:1280px) {
  .c2 {
    max-width: 1280px;
    padding: 0 20px;
  }
}

@media (min-width:1600px) {
  .c2 {
    max-width: 1600px;
    padding: 0 20px;
  }
}

@media print {
  .c2 {
    max-width: none;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M8 16A8 8 0 108 0a8 8 0 000 16zM7 4h2v2H7V4zm0 3h2v5H7V7z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              Without onClose prop InfoBar cannot be dismissed
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <br />
  <br />
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <div
              className="c6"
            >
              <svg
                aria-hidden="true"
                className="c7"
                focusable="false"
                height={16}
                preserveAspectRatio="xMidYMid meet"
                role="presentation"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M8 16A8 8 0 108 0a8 8 0 000 16zM7 4h2v2H7V4zm0 3h2v5H7V7z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9"
            >
              With onClose prop InfoBar can be dismissed, but ParentComponent is in charge to react and actually hide the InfoBar.
            </span>
          </div>
          <div
            className="c5"
          >
            <div
              className="c10"
            >
              <button
                onClick={[Function]}
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="c11"
                  focusable="false"
                  height={16}
                  preserveAspectRatio="xMidYMid meet"
                  role="presentation"
                  width={16}
                >
                  <path
                    d="M9.414 8l5.793-5.793L13.793.793 8 6.586 2.207.793.793 2.207 6.586 8 .793 13.793l1.414 1.414L8 9.414l5.793 5.793 1.414-1.414L9.414 8z"
                    fill="currentColor"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
